# notch

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-helper-image.yaml  pip-compile-upgrade.yaml  publish-release-to-pypi.yaml  publish.yaml
ci/: gen.py
src/: .gitignore
src/notch/: __init__.py
