[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.0,<0.10.0"]

[project]
name = "notch"
version = "2025.2"
description = "The Python logging micropackage"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: System :: Logging",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/notch"
"Changes" = "https://github.com/williamjacksn/notch/releases"
"Issues" = "https://github.com/williamjacksn/notch/issues"

[dependency-groups]
dev = [
    "uv-build>=0.9.0",
]
