[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.22,<0.10.0"]

[project]
name = "notch"
version = "2026.0"
description = "The Python logging micropackage"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: System :: Logging",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/notch"
"Changes" = "https://github.com/williamjacksn/notch/releases"
"Issues" = "https://github.com/williamjacksn/notch/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.9",
    "uv-build>=0.9.22",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
