[metadata]
name = logs
version = 0.0.1
author = William Jackson
author_email = william@subtlecoolness.com
description = The Python logging micropackage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/williamjacksn/logs
project_urls =
    Bug Tracker = https://github.com/williamjacksn/logs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
